# ndof-core-utils

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.zed/: tasks.json
cmake/: config.cmake.in
include/ndof/core_utils/: strings.hpp  version.hpp
scripts/: build.sh
src/: strings.cpp  version.cpp
tests/: CMakeLists.txt  strings_test.cpp  version_test.cpp
